--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          background-color: #f0f0f0;
+        }
+        .poster {
+          max-width: 100%;
+          max-height: 80vh;
+        }
+      </style>
 </head>
 <body>
     <h1>Peliculas</h1>
+    <img class="poster" src="URL_DEL_POSTER_PATH_AQUÍ" alt="Poster Image">
+    <script src="config.js"></script>
 </body>
 </html>
