--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <h1>Peliculas</h1>
     <img class="poster" src="URL_DEL_POSTER_PATH_AQUÍ" alt="Poster Image">
+    <div id="collectionName"></div>
     <script src="config.js"></script>
 </body>
 </html>
