--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-          margin: 0;
-          padding: 0;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-          background-color: #f0f0f0;
-        }
-        .poster {
-          max-width: 100%;
-          max-height: 80vh;
-        }
-      </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Film Freak</title>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Peliculas</h1>
-    <img class="poster" src="URL_DEL_POSTER_PATH_AQUÍ" alt="Poster Image">
-    <div id="collectionName"></div>
-    <script src="config.js"></script>
+  <div class="contenedor" id="contenedor"></div>
+
+  <div class="paginacion">
+    <button id="btnAnterior">Anterior</button>
+    <button id="btnSiguiente">Siguiente</button>
+  </div>
+
+  <script src="app.js"></script>
 </body>
+
 </html>
