--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
     </div>
     <div class="hero-section">
-      <h2 class="title extra-big">Calculo de Integrales Definidas</h2>
+      <h2 class="title extra-big" id="title_hero">Titulo</h2>
       <div class="text-50-width normal-text">
-        <p>Descubre el poder del cálculo integral, una rama
+        <p id="sinopsis_hero">Descubre el poder del cálculo integral, una rama
           fascinante de las matemáticas que tiene aplicaciones en una amplia variedad de campos, desde la
           física
           hasta
