--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="" alt="">
         </div>
         <div>
-          <h2>Titulo</h2>
+          <h2>Titulos</h2>
           <a href="#section-main">
             <div class="background-purple normal-text size-medium textwhite button-hero">Ver detalles</div>
           </a>
