bento and links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="more-popular-hero">
       <div class="container-principal-popular">
         <div class="container-backdrop-popular" id="myHeader">
-            <h2 class="" id="title_hero">Titulo</h2>
+          <h2 class="" id="title_hero">Titulo</h2>
         </div>
         <div class="container-info-popular">
           <div class="">
@@ -45,40 +45,52 @@
         <div class="poster-card-popular-hero" id="firstCardPopular"></div>
         <div class="information-card">
           <h2 id="firstTitleCardPopular">Titulo</h2>
-          <a href="#section-main">
-            <div class="background-purple normal-text size-medium textwhite button-hero">Ver detalles</div>
-          </a>
+          <div id="firstButtonPopular" class="button-movie-popular">Ver detalles</div>
         </div>
       </div>
       <div class="card-popular-hero">
         <div class="poster-card-popular-hero" id="secondCardPopular"></div>
         <div class="information-card">
           <h2 id="secondTitleCardPopular">Titulo</h2>
-          <a href="#section-main">
-            <div class="background-purple normal-text size-medium textwhite button-hero">Ver detalles</div>
-          </a>
+          <div id="secondButtonPopular" class="button-movie-popular">Ver detalles</div>
         </div>
       </div>
       <div class="card-popular-hero">
         <div class="poster-card-popular-hero" id="thirdCardPopular"></div>
         <div class="information-card">
           <h2 id="thirdTitleCardPopular">Titulo</h2>
-          <a href="#section-main">
-            <div class="background-purple normal-text size-medium textwhite button-hero">Ver detalles</div>
-          </a>
+          <div id="thirdButtonPopular" class="button-movie-popular">Ver detalles</div>
         </div>
       </div>
       <div class="card-popular-hero">
         <div class="poster-card-popular-hero" id="fourthCardPopular"></div>
         <div class="information-card">
           <h2 id="fourthTitleCardPopular">Titulo</h2>
-          <a href="#section-main">
-            <div class="background-purple normal-text size-medium textwhite button-hero">Ver detalles</div>
-          </a>
+          <div id="fourButtonPopular" class="button-movie-popular">Ver detalles</div>
         </div>
       </div>
     </section>
   </header>
+  <a href="movie.html">
+    <section class="container-invitation-filter">
+      <p>¿Buscas una pelicula en especifico?</p>
+      <p>Haz click aqui</p>
+    </section>
+  </a>
+  <main>
+    <section class="section-in-theaters">
+      <p>TEATROS</p>
+    </section>
+    <section class="section-trailers">
+      <p>Trailers</p>
+    </section>
+    <section class="section-popular">
+      <p>POPULARES</p>
+    </section>
+    <section class="section-top-rated">
+      <p>LO MEJOR VALORADO</p>
+    </section>
+  </main>
   <div class="contenedor" id="contenedor"></div>
 
   <div class="paginacion">
