mid sections and urls

--- a/index.html
+++ b/index.html
@@ -79,24 +79,25 @@
   </a>
   <main>
     <section class="section-in-theaters">
-      <p>TEATROS</p>
+      <h3>Ahora mismo en teatros</h3>
+      <div class="contenedorTeatros" id="containerTheaters"></div>
     </section>
     <section class="section-trailers">
       <p>Trailers</p>
     </section>
     <section class="section-popular">
-      <p>POPULARES</p>
+      <h3>Populares</h3>
+      <div class="contenedor" id="contenedor"></div>
     </section>
     <section class="section-top-rated">
       <p>LO MEJOR VALORADO</p>
     </section>
+    <div class="paginacion">
+      <button id="btnAnterior">Anterior</button>
+      <button id="btnSiguiente">Siguiente</button>
+    </div>
   </main>
-  <div class="contenedor" id="contenedor"></div>
-
-  <div class="paginacion">
-    <button id="btnAnterior">Anterior</button>
-    <button id="btnSiguiente">Siguiente</button>
-  </div>
+ 
 
   <script src="app.js"></script>
 </body>
