--- a/movie.html
+++ b/movie.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleMovie.css">
     <title>Document</title>
 </head>
+
 <body>
+    <header>
+        <div class="header-bar">
+            <div class="logo-header">
+                <h1>Film Freak</h1>
+            </div>
+            <div class="options-header">
+                <p>En teatros</p>
+                <p>Populares</p>
+                <p>Trailers</p>
+            </div>
+        </div>
+    </header>
     <a href="index.html">Volver</a>
     <div id="movieInfo"></div>
     <script src="movieInfo.js"></script>
 </body>
+
 </html>
