--- a/index.html
+++ b/index.html
@@ -86,18 +86,27 @@
       <p>Trailers</p>
     </section>
     <section class="section-popular">
-      <h3>Populares</h3>
+      <div class="header-section-pelis">
+        <h3>Populares</h3>
+        <div class="paginacion">
+          <button id="btnAnterior">Anterior</button>
+          <button id="btnSiguiente">Siguiente</button>
+        </div>
+      </div>
       <div class="contenedor" id="contenedor"></div>
     </section>
     <section class="section-top-rated">
-      <p>LO MEJOR VALORADO</p>
+      <div class="header-section-pelis">
+        <h3>Lo mejor valorado</h3>
+        <div class="paginacion">
+          <button id="btnAnteriorTopRated">Anterior</button>
+          <button id="btnSiguienteTopRated">Siguiente</button>
+        </div>
+      </div>
+      <div class="contenedor" id="contenedorTopRated"></div>
     </section>
-    <div class="paginacion">
-      <button id="btnAnterior">Anterior</button>
-      <button id="btnSiguiente">Siguiente</button>
-    </div>
+
   </main>
- 
 
   <script src="app.js"></script>
 </body>
