trailers & especific information

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       <div class="contenedorTeatros" id="containerTheaters"></div>
     </section>
     <section class="section-trailers">
-      <p>Trailers</p>
+      <h3>Trailers</h3>
+      <div class="contenedorTrailers" id="contenedorTrailers"></div>
     </section>
     <section class="section-popular">
       <div class="header-section-pelis">
