more specific info movie

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
       </div>
       <div class="contenedor" id="contenedorTopRated"></div>
     </section>
-
+    <footer>
+      Soy un footer
+    </footer>
   </main>
 
   <script src="app.js"></script>
