--- a/movie.html
+++ b/movie.html
@@ -16,7 +16,7 @@
                 <h1>Film Freak</h1>
             </div>
             <div class="options-header">
-                <p>Buscar Pelicula</p>
+                <p>Buscar Peliculas</p>
             </div>
         </div>
         <div class="headerContainer" id="tituloFrasePelicula">
@@ -27,9 +27,21 @@
             <p>Desliza hacia abajo</p>
         </div>
     </header>
-    <!-- <div>Regresar a la pagina principal</div> -->
+    <main>
+        <section class="container-movie-info">
+            <div id="posterPeli" class="posterPeli"></div>
+            <div class="container-movieInfo">
+                <div id="movieInfo" class="movieInfo"></div>
+                <div id="barInfo" class="barInfo">
+                    <p>HOLA</p>
+                    <p>HOLA</p>
+                    <p>HOLA</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- <a href="index.html">Volver</a> -->
-    <div id="movieInfo"></div>
+    <div ></div>
     <script src="movieInfo.js"></script>
 </body>
 
