organize specific info

--- a/movie.html
+++ b/movie.html
@@ -31,11 +31,11 @@
         <section class="container-movie-info">
             <div id="posterPeli" class="posterPeli"></div>
             <div class="container-movieInfo">
-                <div id="movieInfo" class="movieInfo"></div>
+                <div class="divisor-movieInfo">
+                    <div id="movieInfo" class="movieInfo"></div>
+                    <div id="scoreDiv" class="scoreDiv"></div>
+                </div>
                 <div id="barInfo" class="barInfo">
-                    <p>HOLA</p>
-                    <p>HOLA</p>
-                    <p>HOLA</p>
                 </div>
             </div>
         </section>
