polish principal & start search page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <p>En teatros</p>
         <p>Populares</p>
         <p>Trailers</p>
+        <a href="search.html">
+          <div class="option-search">
+              <p>Buscar Peliculas</p>
+              <i class="bi bi-search"></i>
+          </div>
+      </a>
       </div>
     </div>
     <h3 class="introduction-section">Lo mas popular hoy</h3>
@@ -70,7 +76,7 @@
       </div>
     </section>
   </header>
-  <a href="movie.html">
+  <a href="search.html">
     <section class="container-invitation-filter">
       <p>¿Buscas una pelicula en especifico?</p>
       <p>Haz click aqui</p>
@@ -90,7 +96,7 @@
         <h3>Populares</h3>
         <div class="paginacion">
           <button id="btnAnterior"><i class="bi bi-arrow-left-circle-fill"></i></button>
-          <p>Pagina</p>
+          <p id="paginaPopular"></p>
           <button id="btnSiguiente"><i class="bi bi-arrow-right-circle-fill"></i></button>
         </div>
       </div>
@@ -101,7 +107,7 @@
         <h3>Lo mejor valorado</h3>
         <div class="paginacion">
           <button id="btnAnteriorTopRated"><i class="bi bi-arrow-left-circle-fill"></i></button>
-          <p>Pagina</p>
+          <p id="mostrarPaginaTopRated"></p>
           <button id="btnSiguienteTopRated"><i class="bi bi-arrow-right-circle-fill"></i></button>
         </div>
       </div>
