--- a/movie.html
+++ b/movie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleMovie.css">
-    <link rel="icon" href="icono.png">
+    <link rel="icon" href="icons/claqueta.png">
     <title>FilmFreak | Info. Pelicula</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -53,8 +53,24 @@
             </div>
         </section>
     </main>
-    <!-- <a href="index.html">Volver</a> -->
-    <div></div>
+    <footer>
+        <hr>
+        <div class="info-footer">
+          <p>© 2024 - <a href="https://github.com/SantiagoVillamilC/Film-Freak" target="_blank" rel="noopener noreferrer"><i
+                class="bi bi-github"></i>Santiago Villamil</a></p>
+          <a href="index.html">
+            <div class="logo-header">
+              <h1>Film Freak</h1>
+            </div>
+          </a>
+          <div class="elements-footer">
+            <a href="https://www.themoviedb.org" target="_blank" rel="noopener noreferrer" class="elements-footer">
+              <p>API TMDB</p>
+              <i class="bi bi-camera-reels-fill"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
     <script src="movieInfo.js"></script>
 </body>
 
