--- a/movie.html
+++ b/movie.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleMovie.css">
     <link rel="icon" href="icons/claqueta.png">
-    <title>FilmFreak | Info. Pelicula</title>
+    <title>FilmFreak | Pelicula</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
