--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Freak | Search</title>
     <link rel="icon" href="icons/claqueta.png">
+    <link rel="stylesheet" href="search.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +15,7 @@
 
 <body>
     <a href="index.html">Regresar</a>
-    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <!-- <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
             <h1 style="color: aliceblue;">Hola</h1>
             <form class="d-flex" role="search">
@@ -22,7 +23,26 @@
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
         </div>
-    </nav>
+    </nav> -->
+    <div class="container">
+        <h1>Buscar Películas</h1>
+        <form id="searchForm">
+            <input type="text" id="searchInput" placeholder="Buscar por nombre...">
+            <select id="filterSelect">
+                <option value="">Filtrar por género...</option>
+                <option value="28">Acción</option>
+                <option value="12">Aventura</option>
+                <option value="18">Drama</option>
+            </select>
+            <select id="sortSelect">
+                <option value="popularity.desc">Más Popular</option>
+                <option value="release_date.desc">Más Reciente</option>
+            </select>
+            <button type="submit">Buscar</button>
+        </form>
+        <div id="results"></div>
+    </div>
+    <script src="search.js"></script>
 </body>
 
 </html>
