--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Film Freak</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icons/claqueta.png">
+  <link rel="stylesheet" href="mediaQuerys.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -19,9 +20,9 @@
         <h1>Film Freak</h1>
       </div>
       <div class="options-header">
-        <p>En teatros</p>
-        <p>Populares</p>
-        <p>Trailers</p>
+        <p class="option">En teatros</p>
+        <p class="option">Populares</p>
+        <p class="option">Trailers</p>
         <a href="search.html">
           <div class="option-search">
             <p>Buscar Peliculas</p>
