--- a/search.html
+++ b/search.html
@@ -28,7 +28,7 @@
         <h1>Buscar Películas</h1>
         <form id="searchForm">
             <input type="text" id="searchInput" placeholder="Buscar por nombre...">
-            <select id="filterSelect">
+            <!-- <select id="filterSelect">
                 <option value="">Filtrar por género...</option>
                 <option value="28">Acción</option>
                 <option value="12">Aventura</option>
@@ -37,8 +37,8 @@
             <select id="sortSelect">
                 <option value="popularity.desc">Más Popular</option>
                 <option value="release_date.desc">Más Reciente</option>
-            </select>
-            <button type="submit">Buscar</button>
+            </select> -->
+            <!-- <button type="submit">Buscar</button> -->
         </form>
         <div id="results"></div>
     </div>
