--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Film Freak</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icons/claqueta.png">
-  <link rel="stylesheet" href="mediaQuerys.css">
+  <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
