--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
   <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 </head>
 
 <body>
   <header id="header">
     <div class="header-bar">
-      <div class="logo-header">
+      <div class="logo-header raleway-bold">
         <!-- <img src="icons/claqueta.png" alt=""> -->
         <h1>Film Freak</h1>
       </div>
-      <div class="options-header">
+      <div class="search-container">
+        <input type="text" placeholder="Nombre de la pelicula">
+        <button type="submit">Buscar</button>
+      </div>
+      <div class="options-header raleway-normal">
         <p class="option">En teatros</p>
         <p class="option">Populares</p>
         <p class="option">Trailers</p>
         <a href="search.html">
           <div class="option-search">
-            <p>Buscar Peliculas</p>
-            <i class="bi bi-search"></i>
+            <p>Filtrar Pelis</p>
+            <i class="bi bi-search" ></i>
           </div>
         </a>
       </div>
