headers redesigned all pages

--- a/movie.html
+++ b/movie.html
@@ -13,19 +13,24 @@
 
 <body>
     <header id="header">
-        <div class="header-bar">
-            <div class="logo-header" id="logoHeader">
+        <nav>
+            <div class="header-bar">
+              <div class="logo-header raleway-bold">
+                <!-- <img src="icons/claqueta.png" alt=""> -->
+                <a href="index.html">
                 <h1>Film Freak</h1>
-            </div>
-            <div class="options-header">
-                <a href="">
-                    <div class="option-search">
-                        <p>Buscar Peliculas</p>
-                        <i class="bi bi-search"></i>
-                    </div>
+            </a>
+              </div>
+              <div class="options-header raleway-normal">
+                <a href="search.html">
+                  <div class="option-search">
+                    <p>Filtrar Pelis</p>
+                    <i class="bi bi-search"></i>
+                  </div>
                 </a>
+              </div>
             </div>
-        </div>
+          </nav>
         <div class="headerContainer" id="tituloFrasePelicula">
             <div class="containerTituloPelicula">
                 <h2 class="tituloPelicula" id="tituloPelicula">Titulo</h2>
