--- a/search.html
+++ b/search.html
@@ -9,12 +9,23 @@
     <link rel="stylesheet" href="search.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 </head>
 
 <body>
-    <a href="index.html">Regresar</a>
+    <header>
+        <nav>
+            <div class="header-bar">
+              <div class="logo-header raleway-bold">
+                <!-- <img src="icons/claqueta.png" alt=""> -->
+                <a href="index.html">
+                <h1><strong>Film Freak</strong></h1>
+            </a>
+              </div>
+            </div>
+          </nav>
+    </header>
     <!-- <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
             <h1 style="color: aliceblue;">Hola</h1>
