--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
   </header>
   <a href="search.html">
-    <section class="container-invitation-filter">
+    <section class="container-invitation-filter raleway-bold">
       <p>¿Buscas una pelicula?</p>
       <p>Haz click aqui</p>
     </section>
@@ -125,7 +125,7 @@
       <div class="contenedor" id="contenedorTopRated"></div>
     </section>
     <section class="section-trailers">
-      <h3>Trailers</h3>
+      <h3>Trailers & Videos</h3>
       <div class="contenedorTrailers" id="contenedorTrailers"></div>
     </section>
   </main>
