--- a/index.html
+++ b/index.html
@@ -54,47 +54,19 @@
                 <h2 id="titlePopular" class="raleway-bold">Titulo</h2>
                 <p id="generosPopular" class="raleway-normal">Frase</p>
               </div>
-              <div class="">
+              <!-- <div class="">
                 <p id="sinopsis_hero"></p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </a>
-      <!-- <div class="card-popular-hero">
-        <div class="poster-card-popular-hero" id="firstCardPopular"></div>
-        <div class="information-card">
-          <h2 id="firstTitleCardPopular">Titulo</h2>
-          <div id="firstButtonPopular" class="button-movie-popular">Ver detalles</div>
-        </div>
-      </div>
-      <div class="card-popular-hero">
-        <div class="poster-card-popular-hero" id="secondCardPopular"></div>
-        <div class="information-card">
-          <h2 id="secondTitleCardPopular">Titulo</h2>
-          <div id="secondButtonPopular" class="button-movie-popular">Ver detalles</div>
-        </div>
-      </div>
-      <div class="card-popular-hero">
-        <div class="poster-card-popular-hero" id="thirdCardPopular"></div>
-        <div class="information-card">
-          <h2 id="thirdTitleCardPopular">Titulo</h2>
-          <div id="thirdButtonPopular" class="button-movie-popular">Ver detalles</div>
-        </div>
-      </div>
-      <div class="card-popular-hero">
-        <div class="poster-card-popular-hero" id="fourthCardPopular"></div>
-        <div class="information-card">
-          <h2 id="fourthTitleCardPopular">Titulo</h2>
-          <div id="fourButtonPopular" class="button-movie-popular">Ver detalles</div>
-        </div>
-      </div> -->
     </section>
   </header>
   <a href="search.html">
     <section class="container-invitation-filter raleway-bold">
       <p>¿Buscas una pelicula?</p>
-      <p>Haz click aqui</p>
+      <p>Presiona aquí</p>
     </section>
   </a>
   <main>
