footer & polish movie responsive

--- a/movie.html
+++ b/movie.html
@@ -60,23 +60,23 @@
         </section>
     </main>
     <footer>
-        <hr>
-        <div class="info-footer">
-          <p>© 2024 - <a href="https://github.com/SantiagoVillamilC/Film-Freak" target="_blank" rel="noopener noreferrer"><i
-                class="bi bi-github"></i>Santiago Villamil</a></p>
-          <a href="index.html">
-            <div class="logo-header">
-              <h1>Film Freak</h1>
-            </div>
-          </a>
-          <div class="elements-footer">
-            <a href="https://www.themoviedb.org" target="_blank" rel="noopener noreferrer" class="elements-footer">
-              <p>API TMDB</p>
-              <i class="bi bi-camera-reels-fill"></i>
-            </a>
+      <hr>
+      <div class="info-footer">
+        <p class="first-row-footer">© 2024 - <a href="https://github.com/SantiagoVillamilC/Film-Freak" target="_blank" rel="noopener noreferrer"><i
+              class="bi bi-github"></i>Santiago Villamil</a></p>
+        <a href="#header" class="second-row-footer">
+          <div class="logo-header">
+            <h1>Film Freak</h1>
           </div>
+        </a>
+        <div class="elements-footer third-row-footer">
+          <a href="https://www.themoviedb.org" target="_blank" rel="noopener noreferrer" class="elements-footer">
+            <p>API TMDB</p>
+            <i class="bi bi-camera-reels-fill"></i>
+          </a>
         </div>
-      </footer>
+      </div>
+    </footer>
     <script src="movieInfo.js"></script>
 </body>
 
