--- a/search.html
+++ b/search.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="search.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -37,21 +37,15 @@
     </nav> -->
     <div class="container">
         <h1>Buscar Películas</h1>
-        <form id="searchForm">
-            <input type="text" id="searchInput" placeholder="Buscar por nombre...">
-            <!-- <select id="filterSelect">
-                <option value="">Filtrar por género...</option>
-                <option value="28">Acción</option>
-                <option value="12">Aventura</option>
-                <option value="18">Drama</option>
-            </select>
-            <select id="sortSelect">
-                <option value="popularity.desc">Más Popular</option>
-                <option value="release_date.desc">Más Reciente</option>
-            </select> -->
-            <!-- <button type="submit">Buscar</button> -->
-        </form>
-        <div id="results"></div>
+        <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
+            <form class="container-fluid" id="searchForm">
+              <div class="input-group">
+                <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+                <input id="searchInput" type="text" class="form-control" placeholder="Escribe aqui el nombre de la pelicula que buscas" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            </form>
+          </nav>
+        <div id="results" class="row row-cols-1 row-cols-md-3 g-4"></div>
     </div>
     <script src="search.js"></script>
 </body>
