--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 </head>
-
+<!-- Visita el sitio en: https://santiagovillamilc.github.io/Film-Freak/index.html -->
 <body>
   <header id="header">
     <nav>
