--- a/Home/index.html
+++ b/Home/index.html
@@ -5,13 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Film Freak</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="icon" href="icons/claqueta.png">
   <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
+  <link rel="stylesheet" href="sass/indexStyle.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
+
 <!-- Visita el sitio en: https://santiagovillamilc.github.io/Film-Freak/index.html -->
+
 <body>
   <header id="header">
     <nav>
@@ -21,7 +24,7 @@
           <h1>Film Freak</h1>
         </div>
         <div class="search-container">
-          <input type="text" placeholder="Nombre de la pelicula">
+          <input type="text" placeholder="Todavia no es funcional :)">
           <button type="submit">Buscar</button>
         </div>
         <div class="options-header raleway-normal">
