--- a/Home/index.html
+++ b/Home/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Film Freak</title>
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="icons/claqueta.png">
   <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
-  <link rel="stylesheet" href="sass/indexStyle.css">
+  <!-- <link rel="stylesheet" href="sass/indexStyle.css"> -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
