--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Film Freak</title>
-  <link rel="stylesheet" href="Home/style.css">
+  <!-- <link rel="stylesheet" href="Home/style.css"> -->
   <link rel="icon" href="icons/claqueta.png">
   <link rel="stylesheet" href="Responsive Design/IndexResponsive.css">
-  <!-- <link rel="stylesheet" href="Home/sass/indexStyle.css"> -->
+  <link rel="stylesheet" href="Home/sass/indexStyle.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -20,7 +20,6 @@
     <nav>
       <div class="header-bar">
         <div class="logo-header raleway-bold">
-          <!-- <img src="icons/claqueta.png" alt=""> -->
           <h1>Film Freak</h1>
         </div>
         <div class="search-container">
